--- a/public/styles.css
+++ b/public/styles.css
@@ -3353,13 +3353,14 @@ body.modal-open .bottom-nav {
   position: absolute;
   top: -12vh;
   left: var(--start-x, 50vw);
-  width: var(--size, 30px);
-  height: var(--size, 30px);
+  width: var(--size, 24px);
+  height: var(--size, 24px);
   opacity: var(--opacity, 1);
   transform-origin: 50% 50%;
   animation: tet-fall var(--duration, 12s) linear var(--delay, 0s) infinite;
   will-change: transform, opacity;
   backface-visibility: hidden;
+  filter: drop-shadow(0 3px 6px rgba(145, 52, 72, 0.24));
 }
 
 .tet-flower-icon {
@@ -3367,18 +3368,47 @@ body.modal-open .bottom-nav {
   inset: 0;
   display: grid;
   place-items: center;
+  transform-origin: 58% 64%;
+  animation: tet-flower-flutter var(--flutter-duration, 4s) ease-in-out infinite;
 }
 
+.tet-flower-icon img,
 .tet-flower-icon svg {
   width: 100%;
   height: 100%;
   display: block;
+  object-fit: contain;
   overflow: visible;
   shape-rendering: geometricPrecision;
 }
 
+.tet-flower-img {
+  filter: saturate(1.05) contrast(1.03);
+}
+
+.tet-flower.is-dao .tet-flower-img {
+  filter: saturate(1.06) contrast(1.03);
+}
+
+.tet-flower.is-mai .tet-flower-img {
+  filter: saturate(1.1) contrast(1.02);
+}
+
 .tet-flower-icon svg * {
   vector-effect: non-scaling-stroke;
+}
+
+@keyframes tet-flower-flutter {
+  0%,
+  100% {
+    transform: rotate(calc(var(--flutter-angle, 12deg) * -0.72)) scale(1);
+  }
+  40% {
+    transform: rotate(var(--flutter-angle, 12deg)) translateX(1px) scale(1.03);
+  }
+  72% {
+    transform: rotate(calc(var(--flutter-angle, 12deg) * -0.36)) translateX(-1px) scale(0.98);
+  }
 }
 
 .tet-envelope {
@@ -3470,25 +3500,30 @@ body.modal-open .bottom-nav {
 
 @keyframes tet-fall {
   0% {
-    transform: translate(0, -14vh) rotate(0deg);
+    transform: translate(0, -16vh) rotate(calc(var(--tilt, 0deg) * 0.8));
     opacity: 0;
   }
-  7% {
+  10% {
     opacity: var(--opacity, 1);
   }
-  34% {
-    transform: translate(calc(var(--drift, 0px) * 0.34 - var(--sway, 22px)), 34vh)
-      rotate(calc(var(--spin, 280deg) * 0.34));
+  24% {
+    transform: translate(calc(var(--curve-a, 0px) + var(--sway, 22px)), 24vh)
+      rotate(calc(var(--tilt, 0deg) + var(--spin, 280deg) * 0.22));
   }
-  68% {
-    transform: translate(calc(var(--drift, 0px) * 0.7 + var(--sway, 22px) * 0.7), 74vh)
-      rotate(calc(var(--spin, 280deg) * 0.7));
+  49% {
+    transform: translate(calc(var(--curve-b, 0px) - var(--sway, 22px) * 0.72), 52vh)
+      rotate(calc(var(--tilt, 0deg) + var(--spin, 280deg) * 0.49));
+  }
+  76% {
+    transform: translate(calc(var(--curve-c, 0px) + var(--sway, 22px) * 0.92), 82vh)
+      rotate(calc(var(--tilt, 0deg) + var(--spin, 280deg) * 0.78));
   }
   96% {
     opacity: var(--opacity, 1);
   }
   100% {
-    transform: translate(var(--drift, 0px), 112vh) rotate(var(--spin, 280deg));
+    transform: translate(var(--drift, 0px), 114vh)
+      rotate(calc(var(--tilt, 0deg) + var(--spin, 280deg)));
     opacity: 0;
   }
 }
@@ -3530,6 +3565,7 @@ body.modal-open .bottom-nav {
 
 @media (prefers-reduced-motion: reduce) {
   .tet-flower,
+  .tet-flower-icon,
   .tet-envelope,
   .tet-lantern {
     animation-duration: 0.01ms;
